# pm

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yml
backend/: AGENTS.md  Dockerfile  pyproject.toml  test_shared.db
backend/app/: ai.py  ai_routes.py  database.py  main.py  schemas.py
backend/app/routes/: boards.py
backend/app/services/: ai.py  board_service.py
backend/tests/: conftest.py  test_ai.py  test_ai_chat.py  test_ai_routes.py  test_boards.py  test_database.py  test_integration.py
docs/: DATABASE.md  DEVELOPMENT.md  PLAN.md  code-review.md
frontend/: .npmrc  AGENTS.md  README.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/auth/login/: route.ts
frontend/src/app/api/auth/logout/: route.ts
frontend/src/app/login/: page.tsx
frontend/src/components/: AIChatSidebar.test.tsx  AIChatSidebar.tsx  Header.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanCardPreview.tsx  KanbanColumn.tsx  ThemeToggle.tsx
frontend/src/components/ui/: kanban.tsx
frontend/src/lib/: api.ts  kanban.test.ts
frontend/tests/: kanban.spec.ts
scripts/: AGENTS.md  start.ps1  start.sh  stop.ps1  stop.sh
