[project]
name = "pm-backend"
version = "0.1.0"
description = "Project Management MVP backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-dotenv>=1.1.0",
    "openai>=1.66.0",
    "aiosqlite>=0.21.0",
    "alembic>=1.15.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "pydantic>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.28.0",
    "pytest-asyncio>=0.25.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
